RESOLVED FIXED8604
rowspan does not work when set through javascript
https://bugs.webkit.org/show_bug.cgi?id=8604
Summary rowspan does not work when set through javascript
Thierry Pierron
Reported 2006-04-26 08:50:04 PDT
Look at the test page. It contains two tables. One is static HTML, the other is built using DOM and javascript. If you look in DOM inspector, two have exactly same HTML code, but renders differently. Problem comes from rowSpan assignment. If you put an alert() just before, you can see how wrong the table is rendered.
Attachments
The example builds 2 tables, they must be identical (1.30 KB, text/html)
2007-01-02 07:15 PST, Thierry Pierron
no flags
Mark section for grid recalc when a cell's rowspan/colspan changes (172.85 KB, patch)
2007-01-12 07:03 PST, mitz
darin: review+
mitz
Comment 1 2006-12-19 11:39:31 PST
The linked test case is no longer available. Thierry, could you please attach a copy of the original test to this bug? Thanks!
Thierry Pierron
Comment 2 2007-01-02 07:15:02 PST
Created attachment 12160 [details] The example builds 2 tables, they must be identical Well, I didn't found the original file, so I have to rewrite it. Actually, after rewriting it, I was not able to reproduce the bug, and found a simple workaround : If you build the table, before adding it to the DOM tree, the table is correctly layed out. If you insert the table in the DOM, then start adding rows and cells, while playing with rowSpan property, then the table is incorrectly layed out. Okay, this seems to be a very minor bug ....
mitz
Comment 3 2007-01-07 02:32:59 PST
I think the patch for bug 12124 is going to fix this. Stay tuned.
mitz
Comment 4 2007-01-12 01:27:38 PST
(In reply to comment #3) > I think the patch for bug 12124 is going to fix this. Stay tuned. > It didn't. Will look into this bug.
mitz
Comment 5 2007-01-12 07:03:17 PST
Created attachment 12382 [details] Mark section for grid recalc when a cell's rowspan/colspan changes Fixes a bunch of tests.
Darin Adler
Comment 6 2007-01-13 07:35:10 PST
Comment on attachment 12382 [details] Mark section for grid recalc when a cell's rowspan/colspan changes Great! r=me
Alexey Proskuryakov
Comment 7 2007-01-15 10:58:02 PST
Committed revision 18865.
Note You need to log in before you can comment on or make changes to this bug.