2007-01-15  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=8604
          rowspan does not work when set through javascript

WebCore:
        * rendering/RenderTableCell.cpp:
        (WebCore::RenderTableCell::updateFromElement): Mark the section for grid recalc
        if row span or column span change.

LayoutTests:
        * fast/dom/HTMLTableElement/colSpan-expected.checksum: Updated.
        * fast/dom/HTMLTableElement/colSpan-expected.png: Updated.
        * fast/dom/HTMLTableElement/colSpan-expected.txt: Updated.
        * fast/dom/HTMLTableElement/colSpan.html: Removed comment about expected
        failure.
        * tables/mozilla/bugs/bug22246-2-expected.checksum: Added.
        * tables/mozilla/bugs/bug22246-2-expected.png: Added.
        * tables/mozilla/bugs/bug22246-2-expected.txt: Added.
        * tables/mozilla/bugs/bug22246-2a-expected.checksum: Added.
        * tables/mozilla/bugs/bug22246-2a-expected.png: Added.
        * tables/mozilla/bugs/bug22246-2a-expected.txt: Added.
        * tables/mozilla/bugs/bug22246-3-expected.checksum: Added.
        * tables/mozilla/bugs/bug22246-3-expected.png: Added.
        * tables/mozilla/bugs/bug22246-3-expected.txt: Added.
        * tables/mozilla/bugs/bug22246-3a-expected.checksum: Added.
        * tables/mozilla/bugs/bug22246-3a-expected.png: Added.
        * tables/mozilla/bugs/bug22246-3a-expected.txt: Added.
        * tables/mozilla_expected_failures/bugs/bug22246-2-expected.checksum: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-2-expected.png: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-2-expected.txt: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-2.html: Moved to mozilla/ since it
        no longer fails.
        * tables/mozilla_expected_failures/bugs/bug22246-2a-expected.checksum: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-2a-expected.png: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-2a-expected.txt: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-2a.html: Moved to mozilla/ since it
        no longer fails.
        * tables/mozilla_expected_failures/bugs/bug22246-3-expected.checksum: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-3-expected.png: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-3-expected.txt: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-3.html: Moved to mozilla/ since it
        no longer fails.
        * tables/mozilla_expected_failures/bugs/bug22246-3a-expected.checksum: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-3a-expected.png: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-3a-expected.txt: Removed.
        * tables/mozilla_expected_failures/bugs/bug22246-3a.html: Moved to mozilla/ since it
        no longer fails.



Canonical link: https://commits.webkit.org/15869@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@18865 268f45cc-cd09-0410-ab3c-d52691b4dbfc